validation parameters for merge